2012-10-02  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (handle-event): Ignore synchronous xlib
	window-error and drawable-error in event handler.

	* contrib/clfswm: Dump different image from different installation
	path.

2012-09-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (configure-request handler): Send a
	configuration notify event in a more precise way.

2012-09-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (with-xlib-protect): Limit X errors ignored
	to prevent freezes and add a backtrace system.

2012-09-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (configure-request handler): To be ICCCM
	compliant, send a fake configuration notify event only when the
	window has moved and not when it has been resized.

2012-09-21  Philippe Brochard  <pbrochard@common-lisp.net>

	* Relase 1209

2012-09-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp
	(delete-child-and-children-in-all-frames): Remove all children in
	frames and only close windows.

	* src/*.lisp: Remove uneeded with-xlib-protect.

2012-09-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/wallpaper.lisp (wallpaper): create/use-background
	simplification function.

2012-09-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/wallpaper.lisp: New functionality to handle backgrounds
	on differents screen heads.

	* contrib/toolbar.lisp (toolbar-adjust-root-size): Takes care of
	multiple toolbar on the same root edge.

2012-09-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Hide only children
	hidden by normal windows or frames (but not :dialog,
	:transient...).
	(process-new-window): Remove borders for maxsize windows.
	(show-all-children): Let the choice to always display children or
	to optimize by hidding children not seen . The first option is